[project]
name = "mujocohelper"
version = "0.0.1"
authors = [
  { name="Samuel Galla", email="galla.samuel@icloud.com" },
]
description = "A package including modules to ease the use of mujoco."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E"]

[project.urls]
Homepage = "https://github.com/Techniksam/mujocohelper"
Issues = "https://github.com/Techniksam/mujocohelper/issues"

[tool.setuptools]
packages = ["mujocohelper"]
